# beancount-lalitm

./: .gitignore  README.md  pyproject.toml
src/beancount_lalitm/importers/: ajbell.py  aviva.py  google.py  hsbc.py  hsbc_uk_cc.py  hsbc_us_cc.py  hsbc_us_checking.py  ib.py  ig.py  schwab_eac.py  vanguard.py
src/beancount_lalitm/plugins/: ancillary_accounts.py  uk_cgt_lots.py
src/beancount_tools/: __init__.py
src/beancount_tools/importers/: __init__.py  account_lookup.py  ajbell.py  aviva.py  ib.py  ig.py  schwab_eac.py  vanguard.py
src/beancount_tools/plugins/: __init__.py  ancillary_accounts.py  stock_split.py  uk_cgt_lots.py
tests/: test_importers.py
tests/fixtures/: hsbc_uk.txt  hsbc_uk_cc.json  ib_flex_query.xml
